--- a/SGIFramework/pom.xml
+++ b/SGIFramework/pom.xml
@@ -60,6 +60,11 @@
       <artifactId>httpclient</artifactId>
       <version>4.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.java-websocket</groupId>
+      <artifactId>Java-WebSocket</artifactId>
+      <version>1.3.0</version>
+    </dependency>
   </dependencies>
 
 </project>
