--- a/SGISite/pom.xml
+++ b/SGISite/pom.xml
@@ -65,6 +65,11 @@
       <artifactId>gson</artifactId>
       <version>2.3.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
+      <version>1.3</version>
+    </dependency>
   </dependencies>
 
 
