--- a/SGIFramework/pom.xml
+++ b/SGIFramework/pom.xml
@@ -65,6 +65,11 @@
       <artifactId>Java-WebSocket</artifactId>
       <version>1.3.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
+      <version>1.3</version>
+    </dependency>
   </dependencies>
 
 </project>
