--- a/SGIFramework/pom.xml
+++ b/SGIFramework/pom.xml
@@ -70,6 +70,12 @@
       <artifactId>hamcrest-all</artifactId>
       <version>1.3</version>
     </dependency>
+    <dependency>
+      <groupId>com.sparkjava</groupId>
+      <artifactId>spark-core</artifactId>
+      <version>2.2</version>
+    </dependency>
   </dependencies>
+
 
 </project>
