muted deletionBreakpointTest on BreakpointServiceTest

--- a/SGIFramework/pom.xml
+++ b/SGIFramework/pom.xml
@@ -27,7 +27,37 @@
     </repository>
   </repositories>
 
-  <dependencies>
+
+
+<build>
+<plugins>
+    <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.7</version>
+        <executions>
+            <execution>
+                <id>add-source</id>
+                <phase>generate-sources</phase>
+                <goals>
+                    <goal>add-source</goal>
+                </goals>
+                <configuration>
+                    <sources>
+                        <source>../SGIToolbox/src</source>
+                    </sources>
+                </configuration>
+            </execution>
+        </executions>
+    </plugin>
+
+</plugins>
+
+  <sourceDirectory>src</sourceDirectory>
+  <testSourceDirectory>test</testSourceDirectory>
+</build>
+
+<dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
