--- a/Base/pom.xml
+++ b/Base/pom.xml
@@ -57,6 +57,13 @@
             <artifactId>Java-WebSocket</artifactId>
             <version>1.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>Proteo</groupId>
+            <artifactId>Proteo</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/../framework/Proteo/Proteo.jar</systemPath>
+        </dependency>
     </dependencies>
 
 </project>
