--- a/Base/pom.xml
+++ b/Base/pom.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                             http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>siani.tara</groupId>
@@ -19,7 +20,6 @@
         <directory>../out/build/tafat</directory>
     </build>
 
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -31,8 +31,14 @@
             <groupId>Proteo</groupId>
             <artifactId>Proteo</artifactId>
             <version>1.0</version>
+            <systemPath>${basedir}/../.tara/framework/Proteo/Proteo.jar</systemPath>
             <scope>system</scope>
-            <systemPath>${project.basedir}/../framework/Proteo/Proteo.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <scope>runtime</scope>
+            <version>3.0.0</version>
         </dependency>
     </dependencies>
 
