--- a/site/package.json
+++ b/site/package.json
@@ -26,8 +26,7 @@
       "gulp-useref": "^1.1.2",
       "gulp-vulcanize": "^6.0.0",
       "merge-stream": "^0.1.7",
-      "run-sequence": "^1.0.2",
-      "web-component-tester": "^4.2.0"
+      "run-sequence": "^1.0.2"
   },
   "engines": {
     "node": ">=0.10.0"
