--- a/Base/pom.xml
+++ b/Base/pom.xml
@@ -6,22 +6,30 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-<!--MERGE-->
-<!--    <groupId>Base</groupId>-->
-<!--    <artifactId>Base</artifactId>-->
     <groupId>siani.tara</groupId>
     <artifactId>tafat</artifactId>
-    <version>1.0</version>
+    <version>2.0.0-SNAPSHOT</version>
 
-<!--MERGE-->
-<!--    <build>-->
-<!--        <outputDirectory>../out/production</outputDirectory>-->
-<!--        <testOutputDirectory>../out/test</testOutputDirectory>-->
-<!--        <directory>../out/build</directory>-->
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>siani-maven</id>
+            <name>siani-maven-releases</name>
+            <url>https://artifactory.siani.es/artifactory/libs-release-local</url>
+        </repository>
+    </distributionManagement>
+
+    <repositories>
+        <repository>
+            <id>siani-maven</id>
+            <name>siani-maven-releases</name>
+            <url>http://artifactory.siani.es/artifactory/libs-release</url>
+        </repository>
+    </repositories>
 
     <build>
         <outputDirectory>../out/production/tafat</outputDirectory>
@@ -37,17 +45,9 @@
             <version>LATEST</version>
         </dependency>
         <dependency>
-            <groupId>Proteo</groupId>
-            <artifactId>Proteo</artifactId>
+            <groupId>org.siani.tara</groupId>
+            <artifactId>proteo</artifactId>
             <version>1.0</version>
-            <systemPath>${basedir}/../.tara/framework/Proteo/Proteo.jar</systemPath>
-            <scope>system</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.esotericsoftware</groupId>
-            <artifactId>kryo</artifactId>
-            <scope>runtime</scope>
-            <version>LATEST</version>
         </dependency>
         <dependency>
             <groupId>com.sparkjava</groupId>
