--- a/site/.eslintrc
+++ b/site/.eslintrc
@@ -17,6 +17,7 @@
   },
   "extends": "eslint:recommended",
   "rules": {
+    "no-console": 0,
     "semi": 2,
     "quotes": [2, "single"],
     "eqeqeq": [2, "smart"]
