--- a/Base/pom.xml
+++ b/Base/pom.xml
@@ -1,13 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>siani.tara</groupId>
-    <artifactId>tafat</artifactId>
+    <groupId>org.siani.tafat</groupId>
+    <artifactId>tafat-platform</artifactId>
     <version>2.0.0</version>
 
     <properties>
@@ -47,7 +44,7 @@
         <dependency>
             <groupId>org.siani.tara</groupId>
             <artifactId>proteo</artifactId>
-            <version>1.0.2</version>
+            <version>1.0.5-Snapshot</version>
         </dependency>
         <dependency>
             <groupId>com.sparkjava</groupId>
