--- a/Test/pom.xml
+++ b/Test/pom.xml
@@ -1,36 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.siani.tafat</groupId>
-    <artifactId>test</artifactId>
-    <version>1.0</version>
+	<groupId>tafat</groupId>
+	<artifactId>test</artifactId>
+	<version>1.0</version>
 
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 
-    <build>
-        <outputDirectory>../out/production/test</outputDirectory>
-        <testOutputDirectory>../out/test/test</testOutputDirectory>
-        <directory>../out/build/test</directory>
-    </build>
+	<build>
+		<outputDirectory>../out/production/test</outputDirectory>
+		<testOutputDirectory>../out/test/test</testOutputDirectory>
+		<directory>../out/build/test</directory>
+		<resources>
+			<resource>
+				<directory>${basedir}/../.tara/refactors</directory>
+			</resource>
+		</resources>
+	</build>
+	<repositories>
+		<repository>
+			<id>siani-maven</id>
+			<name>siani-maven-releases</name>
+			<url>http://artifactory.siani.es/artifactory/libs-release</url>
+		</repository>
+	</repositories>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.siani.tafat</groupId>
-            <artifactId>tafat-platform</artifactId>
-            <version>2.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-            <version>LATEST</version>
-        </dependency>
-    </dependencies>
+	<distributionManagement>
+		<repository>
+			<id>siani-maven</id>
+			<name>siani-maven-releases</name>
+			<url>https://artifactory.siani.es/artifactory/libs-release-local</url>
+		</repository>
+	</distributionManagement>
+
+	<dependencies>
+		
+		<dependency>
+		    <groupId>org.siani.tafat</groupId>
+		    <artifactId>tafat-platform</artifactId>
+		    <version>2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+			<version>LATEST</version>
+		</dependency>
+	</dependencies>
 </project>
