--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -50,6 +50,7 @@
             <groupId>org.siani.tara</groupId>
             <artifactId>proteo</artifactId>
             <version>1.1.3-SNAPSHOT</version>
+            <!--<TODO update></TODO>-->
         </dependency>
         <dependency>
             <groupId>com.sparkjava</groupId>
