--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>gson</artifactId>
             <version>2.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.siani.javafmi</groupId>
+            <artifactId>fmu-wrapper</artifactId>
+            <version>2.18.0</version>
+        </dependency>
     </dependencies>
 
 </project>
