--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -66,6 +66,13 @@
             <artifactId>fmu-wrapper</artifactId>
             <version>2.18.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.osp</groupId>
+            <artifactId>osp</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/osp.jar</systemPath>
+        </dependency>
     </dependencies>
 
 </project>
